--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
 <html>
     <h1>Your Usr's Portfolio</h1>
-    <img src="./user.jpg" />
+    <img src="./user.jpg" width="200" height="200" />
 </html>
